--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "start": "npm run build && serve -s build",
-        "format": "prettier-eslint --list-different $PWD/'src/**/*.{js,jsx}'; prettier-eslint --write $PWD/'src/**/*.{js,jsx}'",
-        "lint": "eslint ./src/** --ext .{js,jsx} -c .eslintrc --no-error-on-unmatched-pattern",
-        "lint:fix": "eslint ./src/** --ext .{js,jsx} -c .eslintrc --no-error-on-unmatched-pattern --fix"
+        "lint": "eslint ./src",
+        "eslint:fix": "eslint ./src --fix",
+        "type-check": "tsc --noEmit -p tsconfig.build.json"
     },
     "engines": {
         "node": "14.x"
@@ -58,7 +58,7 @@
         "@types/redux-logger": "3.0.9",
         "@types/styled-components": "5.1.15",
         "@types/uuid": "8.3.1",
-        "eslint": "8.0.1",
+        "eslint": "7",
         "eslint-config-prettier": "8.3.0",
         "nock": "13.1.3",
         "prettier-eslint": "13.0.0",
